--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 </head>
 
 <body>
-    <!-- <img class="img-1" src="a08fc0791d600b7dea1601a8e537d554.jpg"> -->
-    <div class="card col-3">
-        <img class="img-2" src="baby.png">
-        <br>
-        <form>
-            <input class="form-control" type="text" id="SugName" name="sugName" oninput="validationName()"
-                placeholder="Enter a girl name" autofocus>
-            <input type="button" value="Suggest" onclick="submitName()">
-        </form>
-        <p id="nameValidation"></p>
-    </div>
+    <div class="container col-sm-12 col-xl-12">
+        <div class="card col-sm-3 col-xl-3">
+            <img class="img-2" src="baby.png">
+            <br>
+            <form>
+                <input class="form-control" type="text" id="SugName" name="sugName" oninput="validationName()"
+                    placeholder="Enter a girl name" autofocus>
+                <input type="button" value="Suggest" onclick="submitName()">
+            </form>
+            <p id="nameValidation"></p>
+        </div>
 
-    <div id="suggestNameCloud"></div>
+        <div id="suggestNameCloud" class="col-sm-12 col-xl-12"></div>
+    </div>
 
 </body>
 
